# hypr-edgehover

./: CMakeLists.txt  README.md  hyprpm.toml
src/: edgehover.cpp  edgehover.hpp  geometry.cpp  geometry.hpp  main.cpp
tools/: geometry_test.cpp
